--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
