--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@primer/brand-primitives": "^0.40.1",
     "@primer/css": "^21.3.6",
+    "@primer/octicons-react": "^19.12.0",
     "@primer/react-brand": "^0.40.0",
     "@primer/styled-octicons": "^19.11.0",
     "clsx": "^2.1.1",
@@ -17,7 +19,6 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-fast-marquee": "^1.6.5",
     "sass": "^1.78.0"
   },
   "devDependencies": {
