--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.78.0"
+    "react-fast-marquee": "^1.6.5",
+    "sass": "^1.78.0",
+    "tech-stack-icons": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
