--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@primer/styled-octicons": "^19.11.0",
     "clsx": "^2.1.1",
     "devicons-react": "^1.3.0",
+    "framer-motion": "^11.11.9",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "sass": "^1.78.0",
+    "tailwind-merge": "^2.5.4",
     "tech-stack-icons": "^2.1.0"
   },
   "devDependencies": {
