--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@primer/octicons-react": "^19.12.0",
     "@primer/react-brand": "^0.40.0",
     "@primer/styled-octicons": "^19.11.0",
+    "@vercel/analytics": "^1.3.2",
     "clsx": "^2.1.1",
     "devicons-react": "^1.3.0",
     "framer-motion": "^11.11.9",
