refactor: update About component structure and styling
- Cleaned up the About component by removing unnecessary imports and organizing the code for better readability.
- Adjusted the tab toggle functionality for education and career sections.
- Enhanced the rendering of education and career details with improved JSX structure.

chore: remove unused Projects module CSS and refactor Projects component

- Deleted Projects.module.css as it was no longer in use.
- Simplified the Projects component to a basic structure.

feat: implement SparklesText component with animations

- Created a SparklesText component that displays animated sparkles over text.
- Integrated framer-motion for smooth animations and added customizable properties.

chore: update TypeScript configuration and add global type declarations

- Modified tsconfig.json to include Vitest and testing-library types.
- Added global type declarations for CSS modules.

chore: set up Prettier configuration and ignore files

- Added .prettierrc and .prettierignore files for consistent code formatting.
- Configured Prettier to use single quotes and trailing commas.

test: add unit tests for MinimalFooter component

- Created a test suite for the MinimalFooter component to ensure it renders correctly.
- Verified the presence of default copyright text in the footer.

feat: add project data and types for projects

- Introduced a new projects.ts file containing an array of project objects with detailed information.
- Defined TypeScript types for Project and ProjectLink to ensure type safety.

chore: set up Vitest for testing framework

- Configured Vitest with setup files and global settings for testing environment.
- Added cleanup functionality after each test to maintain test isolation.

--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "wahidrizka.dev",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.17.0",
+    "npm": ">=10"
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@primer/brand-primitives": "^0.40.1",
@@ -27,13 +34,20 @@
     "tech-stack-icons": "^2.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
+    "eslint-config-prettier": "^10.1.8",
+    "jsdom": "^27.2.0",
     "postcss": "^8",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.4.5",
+    "vitest": "^4.0.9"
   }
 }
